# trscmake

./: CMakeLists.txt  README.md  dev.7z  p1.txt  trsys_CMake.cpp  trsys_CMake.h
